--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="theme-color" content="#000000"/>
+    <meta name="apple-mobile-web-app-capable" content="yes"/>
+    <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Trideep</title>
     <link href="assets/img/favicon.png" rel="icon">
