--- a/index.html
+++ b/index.html
@@ -86,6 +86,8 @@
                     <h3 class="name">Calculate your average C.G.P.A TO PERCENTAGE</h3><a class="live-p" href="http://trideepghosh.me/Average_cgpa_to_percentage/" target="_blank">Live Preview</a></div>
                 <div class="col-sm-6 col-lg-4 item"><img class="img-fluid" src="assets/img/weather-project.JPG">
                     <h3 class="name">A simple weather app</h3><a class="live-p" href="https://trideepghosh-weather-app.herokuapp.com/" target="_blank">Live Preview</a></div>
+                <div class="col-sm-6 col-lg-4 item"><img class="img-fluid" src="assets/img/chat-app.JPG">
+                    <h3 class="name">A Chat Website</h3><a class="live-p" href="http://trideep-chat-app.herokuapp.com/" target="_blank">Live Preview</a></div>
             </div>
         </div>
     </div>
