--- a/index.html
+++ b/index.html
@@ -76,6 +76,8 @@
                     <h3 class="name">AllSet Solutions</h3><a class="live-p" href="http://trideepghosh.me/AllSet-Solutions/" target="_blank">Live Preview</a></div>
                 <div class="col-sm-6 col-lg-4 item"><img class="img-fluid" src="assets/img/p5.JPG">
                     <h3 class="name">Library Management System</h3><a class="live-p" href="http://trideepghosh.me/LMS/" target="_blank">Live Preview</a></div>
+                <div class="col-sm-6 col-lg-4 item"><img class="img-fluid" src="assets/img/gussingGame.png">
+                    <h3 class="name">Guessing Game</h3><a class="live-p" href="http://trideepghosh.me/Guessing-Game/" target="_blank">Live Preview</a></div>
                 <div class="col-sm-6 col-lg-4 item"><img class="img-fluid" src="assets/img/p4.JPG">
                     <h3 class="name">Background Generator</h3><a class="live-p" href="http://trideepghosh.me/background-generator/" target="_blank">Live Preview</a></div>
                 <div class="col-sm-6 col-lg-4 item"><img class="img-fluid" src="assets/img/p6.JPG">
