--- a/index.html
+++ b/index.html
@@ -90,6 +90,8 @@
                     <h3 class="name">A simple weather app</h3><a class="live-p" href="https://trideepghosh-weather-app.herokuapp.com/" target="_blank">Live Preview</a></div>
                 <div class="col-sm-6 col-lg-4 item"><img class="img-fluid" src="assets/img/chat-app.JPG">
                     <h3 class="name">A Chat Website</h3><a class="live-p" href="http://trideep-chat-app.herokuapp.com/" target="_blank">Live Preview</a></div>
+                <div class="col-sm-6 col-lg-4 item"><img class="img-fluid" src="assets/img/calc.PNG">
+                    <h3 class="name">Calculate your marks into average percentage</h3><a class="live-p" href="http://trideepghosh.me/CALC/" target="_blank">Live Preview</a></div>
             </div>
         </div>
     </div>
