--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="theme-color" content="#000000"/>
-    <meta name="apple-mobile-web-app-capable" content="yes"/>
-    <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+    <meta name="theme-color" content="#000000" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Trideep</title>
     <link href="assets/img/favicon.png" rel="icon">
@@ -21,17 +21,22 @@
 </head>
 
 <body>
-    <section id="homepage" style="width: 100%;height: 100vh;background-color: #000000;background-image: url(&quot;assets/img/bg.jpg&quot;);background-repeat: no-repeat;background-size: cover;background-position: center;">
+    <section id="homepage"
+        style="width: 100%;height: 100vh;background-color: #000000;background-image: url(&quot;assets/img/bg.jpg&quot;);background-repeat: no-repeat;background-size: cover;background-position: center;">
         <nav class="navbar navbar-light navbar-expand-md">
-            <div class="container-fluid"><a class="navbar-brand" href="#"><img data-aos="fade-right" data-aos-delay="450" data-aos-once="true" id="logo" src="assets/img/profile.png"></a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-                <div
-                    class="collapse navbar-collapse" id="navcol-1">
+            <div class="container-fluid"><a class="navbar-brand" href="#"><img data-aos="fade-right"
+                        data-aos-delay="450" data-aos-once="true" id="logo" src="assets/img/profile.png"></a><button
+                    data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle
+                        navigation</span><span class="navbar-toggler-icon"></span></button>
+                <div class="collapse navbar-collapse" id="navcol-1">
                     <ul class="nav navbar-nav ml-auto" style="height: 50px;">
-                        <li class="nav-item" role="presentation"><a class="nav-link active" href="#homepage" style="color: rgba(241,234,234,0.9);">Home</a></li>
+                        <li class="nav-item" role="presentation"><a class="nav-link active" href="#homepage"
+                                style="color: rgba(241,234,234,0.9);">Home</a></li>
                         <li class="nav-item" role="presentation"><a class="nav-link" href="#aboutme">About Me</a></li>
-                        <li class="nav-item" role="presentation"><a class="nav-link" href="#projects" style="padding: 10px;">Projects</a></li>
+                        <li class="nav-item" role="presentation"><a class="nav-link" href="#projects"
+                                style="padding: 10px;">Projects</a></li>
                     </ul>
-            </div>
+                </div>
             </div>
         </nav>
         <div id="intro">
@@ -40,7 +45,8 @@
         </div>
     </section>
     <section id="aboutme" style="width: 100%;height: 100vh;color: #7d8285;background-color: #000000;">
-        <div data-aos="fade-up" data-aos-duration="1000" data-aos-delay="50" id="about-me" style="padding: 50px 0px 0px;">
+        <div data-aos="fade-up" data-aos-duration="1000" data-aos-delay="50" id="about-me"
+            style="padding: 50px 0px 0px;">
             <div class="container">
                 <div id="heading">
                     <h1 class="text-center" style="font-family: Montserrat, sans-serif;">About Me</h1>
@@ -48,15 +54,26 @@
                 <div class="text-center" id="about-part" style="padding: 20px 0px 0px;">
                     <div class="row">
                         <div class="col offset-0"><img id="profile-img" src="assets/img/IMG_20200507_162637.jpg">
-                            <h2 style="padding: 0;margin: px;height: 70px;font-size: 40px;font-family: Montserrat, sans-serif;"><br><strong>Trideep Ghosh</strong><br><br></h2>
-                            <p class="text-center" style="margin: 35px 0px 0px;opacity: 0.59;font-family: Montserrat, sans-serif;">FULL STACK WEB DEVELOPER</p>
-                            <p style="width: 90%;margin: 0px auto;font-family: Montserrat, sans-serif;"><br>Hey There I'm a Final Year Student of Bankura&nbsp; &nbsp;Unnayani Institute of Engineering B.TECH&nbsp; (CSE)&nbsp; I have worked on several Projects mini and major both.I hope you will find the project section where I
-                                have given links to all my works even you can live preview my projects&nbsp; &nbsp;<br><br></p>
+                            <h2
+                                style="padding: 0;margin: px;height: 70px;font-size: 40px;font-family: Montserrat, sans-serif;">
+                                <br><strong>Trideep Ghosh</strong><br><br></h2>
+                            <p class="text-center"
+                                style="margin: 35px 0px 0px;opacity: 0.59;font-family: Montserrat, sans-serif;">FULL
+                                STACK WEB DEVELOPER</p>
+                            <p style="width: 90%;margin: 0px auto;font-family: Montserrat, sans-serif;"><br>Hey There
+                                I'm a Final Year Student of Bankura&nbsp; &nbsp;Unnayani Institute of Engineering
+                                B.TECH&nbsp; (CSE)&nbsp; I have worked on several Projects mini and major both.I hope
+                                you will find the project section where I
+                                have given links to all my works even you can live preview my projects&nbsp;
+                                &nbsp;<br><br></p>
                             <div id="icon">
                                 <div class="row text-center">
-                                    <div class="col text-center"><a href="https://www.facebook.com/trideep.ghosh1" target="_blank"><i class="fa fa-facebook-square icon-style"></i></a><a href="twitter.com/Trideep__Ghosh" target="_blank"><i class="fa fa-twitter icon-style"></i></a>
-                                        <a
-                                            href="https://www.linkedin.com/in/trideep-ghosh-95000613a" target="_blank"><i class="fa fa-linkedin-square icon-style"></i></a>
+                                    <div class="col text-center"><a href="https://www.facebook.com/trideep.ghosh1"
+                                            target="_blank"><i class="fa fa-facebook-square icon-style"></i></a><a
+                                            href="twitter.com/Trideep__Ghosh" target="_blank"><i
+                                                class="fa fa-twitter icon-style"></i></a>
+                                        <a href="https://www.linkedin.com/in/trideep-ghosh-95000613a" target="_blank"><i
+                                                class="fa fa-linkedin-square icon-style"></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -73,31 +90,53 @@
             </div>
             <div class="row projects">
                 <div class="col-sm-6 col-lg-4 item"><img class="img-fluid" src="assets/img/p2.JPG">
-                    <h3 class="name">AllSet Solutions</h3><a class="live-p" href="http://trideepghosh.me/AllSet-Solutions/" target="_blank">Live Preview</a></div>
+                    <h3 class="name">AllSet Solutions</h3><a class="live-p"
+                        href="http://trideepghosh.me/AllSet-Solutions/" target="_blank">Live Preview</a>
+                </div>
                 <div class="col-sm-6 col-lg-4 item"><img class="img-fluid" src="assets/img/p5.JPG">
-                    <h3 class="name">Library Management System</h3><a class="live-p" href="http://trideepghosh.me/LMS/" target="_blank">Live Preview</a></div>
+                    <h3 class="name">Library Management System</h3><a class="live-p" href="http://trideepghosh.me/LMS/"
+                        target="_blank">Live Preview</a>
+                </div>
                 <div class="col-sm-6 col-lg-4 item"><img class="img-fluid" src="assets/img/guessingGame.PNG">
-                    <h3 class="name">Guessing Game</h3><a class="live-p" href="http://trideepghosh.me/Guessing-Game/" target="_blank">Live Preview</a></div>
+                    <h3 class="name">Guessing Game</h3><a class="live-p" href="http://trideepghosh.me/Guessing-Game/"
+                        target="_blank">Live Preview</a>
+                </div>
                 <div class="col-sm-6 col-lg-4 item"><img class="img-fluid" src="assets/img/p4.JPG">
-                    <h3 class="name">Background Generator</h3><a class="live-p" href="http://trideepghosh.me/background-generator/" target="_blank">Live Preview</a></div>
+                    <h3 class="name">Background Generator</h3><a class="live-p"
+                        href="http://trideepghosh.me/background-generator/" target="_blank">Live Preview</a>
+                </div>
                 <div class="col-sm-6 col-lg-4 item"><img class="img-fluid" src="assets/img/p6.JPG">
-                    <h3 class="name">Portfolio</h3><a class="live-p" href="http://trideepghosh.me/portfolio/" target="_blank">Live Preview</a></div>
+                    <h3 class="name">Portfolio</h3><a class="live-p" href="http://trideepghosh.me/portfolio/"
+                        target="_blank">Live Preview</a>
+                </div>
                 <div class="col-sm-6 col-lg-4 item"><img class="img-fluid" src="assets/img/p11.JPG">
-                    <h3 class="name">A Simple Calculator</h3><a class="live-p" href="http://trideepghosh.me/Simple_calculator/" target="_blank">Live Preview</a></div>
+                    <h3 class="name">A Simple Calculator</h3><a class="live-p"
+                        href="http://trideepghosh.me/Simple_calculator/" target="_blank">Live Preview</a>
+                </div>
                 <div class="col-sm-6 col-lg-4 item"><img class="img-fluid" src="assets/img/p3.JPG">
-                    <h3 class="name">Calculate your average C.G.P.A TO PERCENTAGE</h3><a class="live-p" href="http://trideepghosh.me/Average_cgpa_to_percentage/" target="_blank">Live Preview</a></div>
+                    <h3 class="name">Calculate your average C.G.P.A TO PERCENTAGE</h3><a class="live-p"
+                        href="http://trideepghosh.me/Average_cgpa_to_percentage/" target="_blank">Live Preview</a>
+                </div>
                 <div class="col-sm-6 col-lg-4 item"><img class="img-fluid" src="assets/img/weather-project.JPG">
-                    <h3 class="name">A simple weather app</h3><a class="live-p" href="https://trideepghosh-weather-app.herokuapp.com/" target="_blank">Live Preview</a></div>
-                <div class="col-sm-6 col-lg-4 item"><img class="img-fluid" src="assets/img/chat-app.JPG">
-                    <h3 class="name">A Chat Website</h3><a class="live-p" href="http://trideep-chat-app.herokuapp.com/" target="_blank">Live Preview</a></div>
+                    <h3 class="name">A simple weather app</h3><a class="live-p"
+                        href="https://trideepghosh-weather-app.herokuapp.com/" target="_blank">Live Preview</a>
+                </div>
                 <div class="col-sm-6 col-lg-4 item"><img class="img-fluid" src="assets/img/calc.png">
-                    <h3 class="name">Calculate your marks into average percentage</h3><a class="live-p" href="http://trideepghosh.me/CALC/" target="_blank">Live Preview</a></div>
+                    <h3 class="name">Calculate your marks into average percentage</h3><a class="live-p"
+                        href="http://trideepghosh.me/CALC/" target="_blank">Live Preview</a>
+                </div>
+                <div class="col-sm-6 col-lg-4 item"><img class="img-fluid" src="assets/img/chat-app.JPG">
+                    <h3 class="name">A Chat Website</h3><a class="live-p" href="http://trideep-chat-app.herokuapp.com/"
+                        target="_blank">Live Preview</a>
+                </div>
             </div>
         </div>
     </div>
     <div class="footer-basic" style="color: rgba(218,216,216,0.9);background-color: rgb(0,0,0);">
         <footer>
-            <div class="social"><a href="https://www.linkedin.com/in/trideep-ghosh-95000613a" target="_blank"><i class="icon ion-social-linkedin"></i></a><a href="twitter.com/Trideep__Ghosh" target="_blank"><i class="icon ion-social-twitter"></i></a><a href="https://www.facebook.com/trideep.ghosh1"
+            <div class="social"><a href="https://www.linkedin.com/in/trideep-ghosh-95000613a" target="_blank"><i
+                        class="icon ion-social-linkedin"></i></a><a href="twitter.com/Trideep__Ghosh" target="_blank"><i
+                        class="icon ion-social-twitter"></i></a><a href="https://www.facebook.com/trideep.ghosh1"
                     target="_blank"><i class="icon ion-social-facebook"></i></a></div>
             <ul class="list-inline">
                 <li class="list-inline-item"><a href="#homepage">Home</a></li>
