refactor: all project live preview link

--- a/index.html
+++ b/index.html
@@ -91,31 +91,31 @@
             <div class="row projects">
                 <div class="col-sm-6 col-lg-4 item"><img class="img-fluid" src="assets/img/p2.JPG">
                     <h3 class="name">AllSet Solutions</h3><a class="live-p"
-                        href="http://trideepghosh.me/AllSet-Solutions/" target="_blank">Live Preview</a>
+                        href="https://3deep0019.github.io/AllSet-Solutions/" target="_blank">Live Preview</a>
                 </div>
                 <div class="col-sm-6 col-lg-4 item"><img class="img-fluid" src="assets/img/p5.JPG">
-                    <h3 class="name">Library Management System</h3><a class="live-p" href="http://trideepghosh.me/LMS/"
+                    <h3 class="name">Library Management System</h3><a class="live-p" href="https://3deep0019.github.io/LMS/"
                         target="_blank">Live Preview</a>
                 </div>
                 <div class="col-sm-6 col-lg-4 item"><img class="img-fluid" src="assets/img/guessingGame.PNG">
-                    <h3 class="name">Guessing Game</h3><a class="live-p" href="http://trideepghosh.me/Guessing-Game/"
+                    <h3 class="name">Guessing Game</h3><a class="live-p" href="https://3deep0019.github.io/Guessing-Game/"
                         target="_blank">Live Preview</a>
                 </div>
                 <div class="col-sm-6 col-lg-4 item"><img class="img-fluid" src="assets/img/p4.JPG">
                     <h3 class="name">Background Generator</h3><a class="live-p"
-                        href="http://trideepghosh.me/background-generator/" target="_blank">Live Preview</a>
+                        href="https://3deep0019.github.io/background-generator/" target="_blank">Live Preview</a>
                 </div>
                 <div class="col-sm-6 col-lg-4 item"><img class="img-fluid" src="assets/img/p6.JPG">
-                    <h3 class="name">Portfolio</h3><a class="live-p" href="http://trideepghosh.me/portfolio/"
+                    <h3 class="name">Portfolio</h3><a class="live-p" href="https://3deep0019.github.io/portfolio/"
                         target="_blank">Live Preview</a>
                 </div>
                 <div class="col-sm-6 col-lg-4 item"><img class="img-fluid" src="assets/img/p11.JPG">
                     <h3 class="name">A Simple Calculator</h3><a class="live-p"
-                        href="http://trideepghosh.me/Simple_calculator/" target="_blank">Live Preview</a>
+                        href="https://3deep0019.github.io/Simple_calculator/" target="_blank">Live Preview</a>
                 </div>
                 <div class="col-sm-6 col-lg-4 item"><img class="img-fluid" src="assets/img/p3.JPG">
                     <h3 class="name">Calculate your average C.G.P.A TO PERCENTAGE</h3><a class="live-p"
-                        href="http://trideepghosh.me/Average_cgpa_to_percentage/" target="_blank">Live Preview</a>
+                        href="https://3deep0019.github.io/Average_cgpa_to_percentage/" target="_blank">Live Preview</a>
                 </div>
                 <div class="col-sm-6 col-lg-4 item"><img class="img-fluid" src="assets/img/weather-project.JPG">
                     <h3 class="name">A simple weather app</h3><a class="live-p"
@@ -123,7 +123,7 @@
                 </div>
                 <div class="col-sm-6 col-lg-4 item"><img class="img-fluid" src="assets/img/calc.png">
                     <h3 class="name">Calculate your marks into average percentage</h3><a class="live-p"
-                        href="http://trideepghosh.me/CALC/" target="_blank">Live Preview</a>
+                        href="https://3deep0019.github.io/CALC/" target="_blank">Live Preview</a>
                 </div>
                 <div class="col-sm-6 col-lg-4 item"><img class="img-fluid" src="assets/img/chat-app.JPG">
                     <h3 class="name">A Chat Website</h3><a class="live-p" href="http://trideep-chat-app.herokuapp.com/"
